[package]
name = "secure-hose"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
aws-config = { version = "1.6.1", features = ["behavior-version-latest"] }
aws-sdk-ssm = "1.71.0"
clap = { version = "4.5.36", features = ["derive"] }
crossterm = { version = "0.29.0", features = ["event-stream"] }
futures = "0.3.31"
ratatui = "0.29.0"
tokio = { version = "1.44.2", features = ["full"] }
tokio-util = "0.7.14"
