[package]
name = "secure-hose"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.36", features = ["derive"] }
crossterm = { version = "0.29.0", features = ["event-stream"] }
futures = "0.3.31"
home = "0.5.11"
ratatui = "0.29.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["full"] }
tokio-util = "0.7.14"
