[package]
name = "secure-cords"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.36", features = ["derive"] }
eframe = { version = "0.31.1", default-features = false, features = ["glow"] }
egui = "0.31.1"
futures = "0.3.31"
home = "0.5.11"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["full"] }
tokio-util = "0.7.14"
